--- a/data_curating_nb.ipynb
+++ b/data_curating_nb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +335,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Sensor at boundary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sensor position creation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'D:/data/Navier-Stokes/Navier-Stokes/Re_750.npy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m Re \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m750\u001b[39m\n\u001b[0;32m     12\u001b[0m file_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD:/data/Navier-Stokes/Navier-Stokes/Re_\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(Re) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m---> 13\u001b[0m field_data \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m n \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m32\u001b[39m  \u001b[38;5;66;03m# Number of samples\u001b[39;00m\n\u001b[0;32m     15\u001b[0m k \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m   \u001b[38;5;66;03m# Number of variables\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\phong\\.conda\\envs\\tf\\lib\\site-packages\\numpy\\lib\\npyio.py:427\u001b[0m, in \u001b[0;36mload\u001b[1;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[0;32m    425\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[0;32m    426\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m--> 427\u001b[0m     fid \u001b[38;5;241m=\u001b[39m stack\u001b[38;5;241m.\u001b[39menter_context(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mos_fspath\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m    428\u001b[0m     own_fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[0;32m    430\u001b[0m \u001b[38;5;66;03m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'D:/data/Navier-Stokes/Navier-Stokes/Re_750.npy'"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "def generate_sensor_pos(lhs_sample, domain_dim):\n",
+    "    rescaled_sample = np.copy(lhs_sample)\n",
+    "    # Convert columns to np.int32 after scaling\n",
+    "    rescaled_sample[:, 0] = (rescaled_sample[:, 0] * domain_dim)\n",
+    "    return rescaled_sample\n",
+    "\n",
+    "# Generate random sample data\n",
+    "# Example usage:\n",
+    "Re = 750\n",
+    "file_name = \"D:/data/Navier-Stokes/Navier-Stokes/Re_\" + str(Re) + \".npy\"\n",
+    "field_data = np.load(file_name)\n",
+    "n = 32  # Number of samples\n",
+    "k = 1   # Number of variables\n",
+    "sample_up = latin_hypercube_sampling(int(n/2), k)\n",
+    "rescaled_sample_up = generate_sensor_pos(sample_up, 126) # Rescaling to 128 x 256\n",
+    "\n",
+    "sample_down = latin_hypercube_sampling(n/2, k)\n",
+    "rescaled_sample_down = generate_sensor_pos(sample_down, 126) # Rescaling to 128 x 256\n",
+    "\n",
+    "pos_up = np.zeros(shape = (int(n/2),2))\n",
+    "pos_up[:,0:1] = 1\n",
+    "pos_up[:,1:2] = (rescaled_sample_up[:, 1] * 126) + 80\n",
+    "\n",
+    "pos_down = np.zeros(shape = (int(n/2),2))\n",
+    "pos_down[:,0:1] = 126\n",
+    "pos_down[:,1:2] = (rescaled_sample_down[:, 1] * 126) + 80\n",
+    "\n",
+    "pos = np.concatenate([pos_up,pos_down], axis = 0)\n",
+    "plot_field_data = np.copy(field_data)\n",
+    "# # Loop to set specific elements of field_data to 0\n",
+    "for j in range(38):\n",
+    "    for i in range(n):\n",
+    "        plot_field_data[int(pos[i, 0]), int(pos[i,1]), j*3] = 0\n",
+    "        \n",
+    "plt.imshow(np.sqrt(plot_field_data[:,:,0]**2 + field_data[:,:,1]**2 ), vmin = 0, vmax = 2)\n",
+    "plt.show()\n",
+    "print(pos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Full field data creation"
    ]
   },
@@ -371,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
@@ -385,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
