--- a/validation_nb.ipynb
+++ b/validation_nb.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\phong\\.conda\\envs\\tf\\lib\\site-packages\\h5py\\__init__.py:36: UserWarning: h5py is running against HDF5 1.12.2 when it was built against 1.12.1, this may cause problems\n",
+      "  _warn((\"h5py is running against HDF5 {0} when it was built against {1}, \"\n"
+     ]
+    }
+   ],
    "source": [
     "import model\n",
     "import model_fourier\n",
@@ -26,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +82,7 @@
    ],
    "source": [
     "# Prepare field data\n",
-    "no_sensor_list = [8, 16, 32]\n",
+    "no_sensor_list = [32]\n",
     "Re_list_train = [300, 400, 450, 500, 600, 650, 700, 800, 850, 900, 1000]\n",
     "Re_list_test = [350, 550, 750, 950]\n",
     "\n",
@@ -103,7 +112,7 @@
     "\n",
     "full_field_data_whole_test_norm = (full_field_data_whole_test - min_val)/(max_val - min_val)\n",
     "sensor_data_whole_test_norm = []\n",
-    "for i in range(3):\n",
+    "for i in range(1):\n",
     "    sensor_data_whole_test_norm_case = (sensor_data_whole_test[i] - min_val)/(max_val - min_val)\n",
     "    sensor_data_whole_test_norm.append(sensor_data_whole_test_norm_case)\n",
     "\n",
@@ -124,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3"
+       "1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,36 +177,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_model(no_of_sensor):\n",
+    "def load_model(no_of_sensor, layout):\n",
     "    path = 'E:/Research/Physics-informed-machine-learning/weights/'\n",
     "    # Load FLRNet with perceptual loss\n",
     "    flow_recon_net = model.FLRNet(n_sensor = no_of_sensor)\n",
     "    flow_recon_net.encoder.load_weights('E:/Research/Physics-informed-machine-learning/weights/encoder.h5')\n",
     "    flow_recon_net.decoder.load_weights('E:/Research/Physics-informed-machine-learning/weights/decoder.h5')\n",
-    "    file_name = path + 'mapping_' + str(no_of_sensor) + '_ran_w_per.h5'\n",
-    "    flow_recon_net.sens_mapping.load_weights(file_name)\n",
+    "    if layout == 0:\n",
+    "        file_name = path + 'mapping_' + str(no_of_sensor) + '_ran_w_per.h5'\n",
+    "        flow_recon_net.sens_mapping.load_weights(file_name)\n",
+    "    elif layout == 1:\n",
+    "        file_name = 'mapping_' + str(no_of_sensor) + '_cir_ran_w_per.h5'\n",
+    "        flow_recon_net.sens_mapping.load_weights(file_name)\n",
+    "    else:\n",
+    "        file_name = 'mapping_' + str(no_of_sensor) + '_edge_ran_w_per.h5'\n",
+    "        flow_recon_net.sens_mapping.load_weights(file_name)\n",
     "\n",
     "    # Load FLRNet with perceptual loss\n",
     "    flow_recon_net_fourier = model_fourier.FLRNet(n_sensor = no_of_sensor)\n",
     "    flow_recon_net_fourier.encoder.load_weights('encoder_fourier.h5')\n",
     "    flow_recon_net_fourier.decoder.load_weights('decoder_fourier.h5')\n",
-    "    file_name_fourier ='mapping_' + str(no_of_sensor) + '_ran_fourier.h5'\n",
-    "    flow_recon_net_fourier.sens_mapping.load_weights(file_name_fourier)\n",
+    "    if layout == 0:\n",
+    "        file_name = 'mapping_' + str(no_of_sensor) + '_ran_fourier.h5'\n",
+    "        flow_recon_net_fourier.sens_mapping.load_weights(file_name)\n",
+    "    elif layout == 1:\n",
+    "        file_name = 'mapping_' + str(no_of_sensor) + '_circular_fourier.h5'\n",
+    "        flow_recon_net_fourier.sens_mapping.load_weights(file_name)\n",
+    "    else:\n",
+    "        file_name_fourier ='mapping_' + str(no_of_sensor) + '_edge_fourier.h5'\n",
+    "        flow_recon_net_fourier.sens_mapping.load_weights(file_name_fourier)\n",
     "\n",
     "    # Load MLP\n",
     "    mlp_recon = baseline.MLP(no_of_sensor = no_of_sensor)\n",
-    "    file_name_mlp = path + 'mlp_' + str(no_of_sensor) + '_ran.h5'\n",
-    "    mlp_recon.load_weights(file_name_mlp)\n",
+    "    if layout == 0:\n",
+    "        file_name_mlp = path + 'mlp_' + str(no_of_sensor) + '_ran.h5'\n",
+    "        mlp_recon.load_weights(file_name_mlp)\n",
+    "    elif layout == 1:\n",
+    "        file_name_mlp = 'mlp_' + str(no_of_sensor) + '_cir.h5'\n",
+    "        mlp_recon.load_weights(file_name_mlp)\n",
+    "    else:\n",
+    "        file_name_mlp = 'mlp_' + str(no_of_sensor) + '_edge.h5'\n",
+    "        mlp_recon.load_weights(file_name_mlp)\n",
+    "\n",
     "\n",
     "    # pod\n",
     "    modes = np.load('pod_modes_128.npy')\n",
     "    mlp_pod = baseline.MLP_POD(no_of_sensor = no_of_sensor, output_shape=128)\n",
-    "    weight_file_name = 'mlp_pod_' + str(no_of_sensor) + '.h5'\n",
-    "    mlp_pod.load_weights(weight_file_name)\n",
+    "    if layout == 0:\n",
+    "        weight_file_name = 'mlp_pod_' + str(no_of_sensor) + '.h5'\n",
+    "        mlp_pod.load_weights(weight_file_name)\n",
+    "    elif layout == 1:\n",
+    "        weight_file_name = 'mlp_pod_cir_' + str(no_of_sensor) + '.h5'\n",
+    "        mlp_pod.load_weights(weight_file_name)\n",
+    "    else:\n",
+    "        weight_file_name = 'mlp_pod_edge_' + str(no_of_sensor) + '.h5'\n",
+    "        mlp_pod.load_weights(weight_file_name)\n",
+    "\n",
     "\n",
     "    return flow_recon_net, flow_recon_net_fourier, mlp_recon, (mlp_pod,modes)"
    ]
@@ -272,6 +311,13 @@
     "flr_net_fourier = flr_net_fourier*(max_val - min_val) + min_val\n",
     "mlp = mlp*(max_val - min_val) + min_val\n",
     "pod = pod*(max_val - min_val) + min_val"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Robustness pred"
    ]
   },
   {
@@ -352,23 +398,104 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Prediction sensor layouts"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(3, 4, 39, 128, 256, 1)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 21\u001b[0m\n\u001b[0;32m     18\u001b[0m gt_data_case\u001b[38;5;241m.\u001b[39mappend(full_field_data_whole_test_norm[\u001b[38;5;241m39\u001b[39m\u001b[38;5;241m*\u001b[39mcase_idx:(\u001b[38;5;241m39\u001b[39m\u001b[38;5;241m*\u001b[39m(case_idx \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)),:,:,:])\n\u001b[0;32m     20\u001b[0m \u001b[38;5;66;03m## FLRNet\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m _, _, z_sens \u001b[38;5;241m=\u001b[39m flow_recon_net\u001b[38;5;241m.\u001b[39msens_mapping(\u001b[43msensor_data_whole_test_norm\u001b[49m\u001b[43m[\u001b[49m\u001b[43midx\u001b[49m\u001b[43m]\u001b[49m[\u001b[38;5;241m39\u001b[39m\u001b[38;5;241m*\u001b[39mcase_idx:(\u001b[38;5;241m39\u001b[39m\u001b[38;5;241m*\u001b[39m(case_idx \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)),:])\n\u001b[0;32m     22\u001b[0m reconstruction_sens_flr \u001b[38;5;241m=\u001b[39m flow_recon_net\u001b[38;5;241m.\u001b[39mdecoder(z_sens)\u001b[38;5;241m.\u001b[39mnumpy()\n\u001b[0;32m     23\u001b[0m flr_net_case\u001b[38;5;241m.\u001b[39mappend(reconstruction_sens_flr)\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
-    "gt_data.shape"
+    "# Save model weight\n",
+    "# Reconstruction\n",
+    "no_of_sensor = 32\n",
+    "gt_data = []\n",
+    "flr_net = []\n",
+    "flr_net_fourier = []\n",
+    "mlp = []\n",
+    "pod = []\n",
+    "for layout in range(3):\n",
+    "    gt_data_case = []\n",
+    "    flr_net_case = []\n",
+    "    flr_net_fourier_case = []\n",
+    "    mlp_case = []\n",
+    "    pod_case = []\n",
+    "    flow_recon_net, flow_recon_net_fourier, mlp_recon, (mlp_pod,modes) = load_model(no_of_sensor,layout)\n",
+    "    for case_idx in range(4):\n",
+    "        gt_data_case.append(full_field_data_whole_test_norm[39*case_idx:(39*(case_idx +1)),:,:,:])\n",
+    "\n",
+    "        ## FLRNet\n",
+    "        _, _, z_sens = flow_recon_net.sens_mapping(sensor_data_whole_test_norm[39*case_idx:(39*(case_idx +1)),:])\n",
+    "        reconstruction_sens_flr = flow_recon_net.decoder(z_sens).numpy()\n",
+    "        flr_net_case.append(reconstruction_sens_flr)\n",
+    "\n",
+    "        ## FLRNet fourier\n",
+    "        _, _, z_sens_fou = flow_recon_net_fourier.sens_mapping(sensor_data_whole_test_norm[39*case_idx:(39*(case_idx +1)),:])\n",
+    "        reconstruction_sens_fou = flow_recon_net_fourier.decoder([z_sens_fou, input_coord[39*case_idx:(39*(case_idx +1)),:,:,:]]).numpy()\n",
+    "        flr_net_fourier_case.append(reconstruction_sens_fou)\n",
+    "\n",
+    "        ## MLP    \n",
+    "        reconstruction_mlp_iter = mlp_recon(sensor_data_whole_test_norm[39*case_idx:(39*(case_idx +1)),:]).numpy()\n",
+    "        mlp_case.append(reconstruction_mlp_iter)\n",
+    "\n",
+    "        ## POD   \n",
+    "        reconstruction_pod = mlp_pod(sensor_data_whole_test_norm[39*case_idx:(39*(case_idx +1)),:])\n",
+    "        full_field_data_flattened_recon = np.matmul(reconstruction_pod, modes.transpose() )   \n",
+    "        full_field_data_recon = np.reshape(full_field_data_flattened_recon, newshape=(full_field_data_flattened_recon.shape[0], 128,256,1))\n",
+    "        pod_case.append(full_field_data_recon)\n",
+    "\n",
+    "    gt_data.append(np.array(gt_data_case))\n",
+    "    flr_net.append(np.array(flr_net_case))\n",
+    "    flr_net_fourier.append(np.array(flr_net_fourier_case))\n",
+    "    mlp.append(np.array(mlp_case))\n",
+    "    pod.append(np.array(pod_case))\n",
+    "    idx += 1\n",
+    "    \n",
+    "gt_data = np.array(gt_data)\n",
+    "flr_net = np.array(flr_net)\n",
+    "flr_net_fourier = np.array(flr_net_fourier)\n",
+    "mlp = np.array(mlp)\n",
+    "pod = np.array(pod)\n",
+    "\n",
+    "# denormalize\n",
+    "gt_data = gt_data*(max_val - min_val) + min_val\n",
+    "flr_net = flr_net*(max_val - min_val) + min_val\n",
+    "flr_net_fourier = flr_net_fourier*(max_val - min_val) + min_val\n",
+    "mlp = mlp*(max_val - min_val) + min_val\n",
+    "pod = pod*(max_val - min_val) + min_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 4, 39, 128, 256, 1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(gt_data.shape)"
    ]
   },
   {
