--- a/FLRNet_AE_train.ipynb
+++ b/FLRNet_AE_train.ipynb
@@ -2663,7 +2663,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
