--- a/FLRNet_train_w_sens_climate.ipynb
+++ b/FLRNet_train_w_sens_climate.ipynb
@@ -119,7 +119,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf",
    "language": "python",
    "name": "python3"
   },
