--- a/data_curating_nb.ipynb
+++ b/data_curating_nb.ipynb
@@ -482,6 +482,140 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# New TensorFlow Dataset Creation System\n",
+    "\n",
+    "I've created a comprehensive dataset creation system for TensorFlow that automates the entire process of creating datasets from your flow field data. Here's how to use it:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import the new dataset creation system\n",
+    "import sys\n",
+    "sys.path.append('./dataset_creation')\n",
+    "\n",
+    "from dataset_creation import FlowFieldDatasetCreator\n",
+    "\n",
+    "# Initialize the dataset creator\n",
+    "creator = FlowFieldDatasetCreator(\n",
+    "    data_path=\"D:/data/Navier-Stokes/Navier-Stokes/\",  # Update this path\n",
+    "    output_path=\"./dataset_creation/\",\n",
+    "    domain_shape=(128, 256),\n",
+    "    time_steps=39,\n",
+    "    reynolds_numbers=[300, 350, 400, 450, 500, 550, 600, 650, 700, 750, 800, 850, 900, 950, 1000]\n",
+    ")\n",
+    "\n",
+    "print(\"Dataset creator initialized successfully!\")\n",
+    "print(f\"Domain shape: {creator.domain_shape}\")\n",
+    "print(f\"Time steps: {creator.time_steps}\")\n",
+    "print(f\"Sensor counts: {creator.sensor_counts}\")\n",
+    "print(f\"Reynolds numbers: {creator.reynolds_numbers}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create datasets for specific configurations\n",
+    "# This replaces the manual loops in the original notebook\n",
+    "\n",
+    "# Example 1: Create random sensor layout with 32 sensors\n",
+    "print(\"Creating random sensor layout with 32 sensors...\")\n",
+    "random_dataset = creator.create_dataset_for_layout('random', 32)\n",
+    "creator.save_dataset(random_dataset, 'random', 32)\n",
+    "\n",
+    "# Example 2: Create circular sensor layout with 16 sensors\n",
+    "print(\"Creating circular sensor layout with 16 sensors...\")\n",
+    "circular_dataset = creator.create_dataset_for_layout('circular', 16)\n",
+    "creator.save_dataset(circular_dataset, 'circular', 16)\n",
+    "\n",
+    "# Example 3: Create edge sensor layout with 8 sensors\n",
+    "print(\"Creating edge sensor layout with 8 sensors...\")\n",
+    "edge_dataset = creator.create_dataset_for_layout('edge', 8)\n",
+    "creator.save_dataset(edge_dataset, 'edge', 8)\n",
+    "\n",
+    "print(\"Individual datasets created successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create all datasets at once (uncomment to run)\n",
+    "# This will create all combinations of layouts and sensor counts\n",
+    "# creator.create_all_datasets()\n",
+    "\n",
+    "# Load a previously created dataset and create TensorFlow datasets\n",
+    "try:\n",
+    "    # Load the random dataset with 32 sensors\n",
+    "    dataset = creator.load_dataset('random', 32)\n",
+    "    \n",
+    "    # Create TensorFlow datasets for training\n",
+    "    import tensorflow as tf\n",
+    "    \n",
+    "    train_dataset, test_dataset = creator.create_tensorflow_dataset(\n",
+    "        dataset, \n",
+    "        batch_size=16, \n",
+    "        shuffle=True, \n",
+    "        test_split=0.2\n",
+    "    )\n",
+    "    \n",
+    "    print(\"TensorFlow datasets created successfully!\")\n",
+    "    print(f\"Train dataset: {train_dataset}\")\n",
+    "    print(f\"Test dataset: {test_dataset}\")\n",
+    "    \n",
+    "    # Example: Iterate through a few batches\n",
+    "    print(\"\\nSample batch information:\")\n",
+    "    for i, batch in enumerate(train_dataset.take(2)):\n",
+    "        print(f\"Batch {i+1}:\")\n",
+    "        print(f\"  Sensor data shape: {batch['sensor_data'].shape}\")\n",
+    "        print(f\"  Field data shape: {batch['field_data'].shape}\")\n",
+    "        \n",
+    "except Exception as e:\n",
+    "    print(f\"Error creating TensorFlow datasets: {e}\")\n",
+    "    print(\"Make sure to create the datasets first using the cells above.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visualize sensor layouts\n",
+    "print(\"Visualizing sensor layouts...\")\n",
+    "\n",
+    "# Visualize different sensor configurations\n",
+    "layouts_to_visualize = [\n",
+    "    ('random', 32),\n",
+    "    ('circular', 16),\n",
+    "    ('edge', 8)\n",
+    "]\n",
+    "\n",
+    "for layout_type, n_sensors in layouts_to_visualize:\n",
+    "    print(f\"\\nVisualizing {layout_type} layout with {n_sensors} sensors:\")\n",
+    "    creator.visualize_sensor_layout(layout_type, n_sensors, reynolds_number=750)\n",
+    "\n",
+    "# Get information about available datasets\n",
+    "info = creator.get_dataset_info()\n",
+    "print(\"\\nDataset Information:\")\n",
+    "print(f\"Available datasets: {info['available_datasets']}\")\n",
+    "print(f\"Domain shape: {info['domain_shape']}\")\n",
+    "print(f\"Time steps: {info['time_steps']}\")\n",
+    "print(f\"Reynolds numbers: {info['reynolds_numbers']}\")"
+   ]
   }
  ],
  "metadata": {
